<resources>
    <string name="app_name">TrendBlend</string>
    <string name="lemon_select">Click to select a lemon!</string>
    <string name="lemon_squeeze">Click to juice the lemon!</string>
    <string name="lemon_drink">Click to drink your lemonade!</string>
    <string name="lemon_empty_glass">Click to start again!</string>
    <string name="squeeze_count">Squeeze count: %1$d, keep squeezing!</string>
    <string name="The_Kitchen">The_Kitchen</string>
    <string name="email_address">Email_Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="if_you_have_already_login">If You Have Already Login</string>
    <string name="sign_up">Sign up</string>
    <string name="phone_no">Phone number</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="orders">Orders</string>
    <string name="special_offers">Special Offers</string>
    <string name="discount">Discount</string>
    <string name="rewards">Rewards</string>
    <string name="open_drawer">open drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_starter">go to starter</string>
    <string name="go_to_snacks">go to snacks</string>
    <string name="main_pic">main pic</string>
    <string name="shopping_world">Shopping World</string>
    <string name="images">images</string>
    <string name="shoes">shoes</string>
    <string name="go_to_shoes">Go To Shoes</string>
    <string name="go_to_shirt">Go To Shirt</string>
    <string name="add_to_cary">Add to Cary</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="orderss">Order</string>
    <string name="full_name">Full Name</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="go_to_jean">go to jean</string>
    <string name="logout">Logout</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="phone_numberr">Phone Number</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="update">Edit</string>
    <string name="save">Save</string>
    <string name="shirts">Shirts</string>
</resources>