<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/img_2">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:background="@drawable/circle_background"
         android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_world"
            android:textSize="33sp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:minHeight="50dp"
            android:layout_marginTop="10dp"
            />


        <EditText
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:minHeight="50dp"
            tools:ignore="DuplicateIds" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:minHeight="50dp"
            />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:minHeight="50dp"
            />


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/browser_actions_bg_grey"
            android:layout_marginTop="10dp"/>





    </LinearLayout>


</RelativeLayout>